[gd_scene load_steps=4 format=3 uid="uid://l1ap1jwj6kcr"]

[ext_resource type="Script" uid="uid://bxabm7jb0dr35" path="res://game/ui/region/region_details_view.gd" id="1_p1y7a"]
[ext_resource type="Script" uid="uid://ceaypferk5yw7" path="res://game/ui/pieces/piece_view.gd" id="1_wrl05"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_p1y7a"]
size = Vector2(128, 128)

[node name="RegionDetailsView" type="PanelContainer"]
offset_right = 331.0
offset_bottom = 406.0
script = ExtResource("1_p1y7a")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RegionLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Region Name"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NationLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Nation"
horizontal_alignment = 1

[node name="StructureContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/StructureContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StructureIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/StructureContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("PlaceholderTexture2D_p1y7a")
stretch_mode = 3

[node name="StrongholdPieceView" type="PanelContainer" parent="MarginContainer/VBoxContainer/StructureContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_wrl05")
metadata/_custom_type_script = "uid://ceaypferk5yw7"

[node name="RegionPieceView" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_wrl05")
metadata/_custom_type_script = "uid://ceaypferk5yw7"
